// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/Container Centered Content 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ QCGZt sc-gsBrbv cLTACJ sc-aKZfe dnXERG"
    >
      <h3
        class="sc-iktFzd ePMNkU sc-jJEJSO kYibbK"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/Container Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <div
      class="sc-gKsewC cgpPfo sc-iBPRYJ QCGZt sc-gsBrbv fHHEeu sc-aKZfe dnXERG"
    >
      <h3
        class="sc-iktFzd ePMNkU sc-jJEJSO kYibbK"
      >
        I am in a container
      </h3>
    </div>
  </div>
</div>
`;
